end  news page start text-page.html

--- a/src/blocks/modules/card/card.html
+++ b/src/blocks/modules/card/card.html
@@ -10,7 +10,7 @@
             <p class="card-text">Производственная система сразу трех заводов ОМК удостоена медалей Toyota</p>
         </div>
         <div class="card-footer">
-            <div class="card-date">10 фев</div>
+            <div class="card-date">10 фев 2018</div>
             <div class="card-like"><i class="icon"></i>0</div>
             <div class="card-comment"><i class="icon"></i>23</div>
         </div>
