text-page, like, comment, thumbl slider

--- a/src/blocks/modules/card/card.html
+++ b/src/blocks/modules/card/card.html
@@ -1,7 +1,10 @@
 <div class="col-12">
     <a href="/" class="card card--main">
         <picture class="card-img">
+            <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="" type="image/webp">
+            <!--[if IE 9]></video><![endif]-->
+
             <img src="..." type="image/jpg" title="" alt="...">
         </picture>
         <div class="card-body">
@@ -20,7 +23,9 @@
 <div class="col-md-4">
     <a href="/" class="card">
         <picture class="card-img">
+            <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="" type="image/webp">
+            <!--[if IE 9]></video><![endif]-->
             <img src="..." type="image/jpg" title="" alt="...">
         </picture>
         <div class="card-body">
@@ -38,7 +43,9 @@
 <div class="col-md-4">
     <a href="/" class="card card--image">
         <picture class="card-img">
+            <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="" type="image/webp">
+            <!--[if IE 9]></video><![endif]-->
             <img src="..." type="image/jpg" title="" alt="...">
         </picture>
         <div class="card-body">
