--- a/src/blocks/modules/video/video.html
+++ b/src/blocks/modules/video/video.html
@@ -1,7 +1,9 @@
 <div class="video">
     <div class="video__body">
         <picture class="video__preview">
+            <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="img/AA5J7433.webp" type="image/webp">
+            <!--[if IE 9]></video><![endif]-->
             <img src="img/AA5J7433.jpg" type="image/jpg" title="" alt="">
         </picture>
         <video class="video__player" controls preload="auto">
