fix galleryThumbs slider , add progressbar to textpage

--- a/src/blocks/modules/galleryThumbs/galleryThumbs.html
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.html
@@ -8,12 +8,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -22,12 +16,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -36,12 +24,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -50,12 +32,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -64,12 +40,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -78,12 +48,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -92,12 +56,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -106,12 +64,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -120,12 +72,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -134,12 +80,6 @@
                      <!--[if IE 9]></video><![endif]-->
                     <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
                 </picture>
-                <div class="thumbs-slider__main-text">
-                    <div class="title">Новые технологии на ВМЗ в 2019</div>
-                    <div class="text">
-                        Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…
-                    </div>
-                </div>
             </div>
         </div>
         <div class="swiper-container thumbs-slider__nav">
@@ -231,4 +171,187 @@
     <div class="swiper-button swiper-button-prev thumbs-slider-prev"></div>
     <div class="swiper-button swiper-button-next thumbs-slider-next"></div>
     <div class="swiper-pagination"></div>
+    <div class="thumbs-slider__description">
+        <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+        <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+    </div>
+</div>
+
+<div class="thumbs-slider">
+    <div class="swiper-container thumbs-slider__main thumbs-slider__main--border">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+            <div class="swiper-slide">
+                <picture class="thumbs-slider__main-img">
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                </picture>
+            </div>
+        </div>
+        <div class="swiper-container thumbs-slider__nav">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+                <div class="swiper-slide">
+                    <picture class="thumbs-slider__nav-img">
+                        <!--[if IE 9]><video style="display: none;"><![endif]-->
+                        <source srcset="img/AA5J6740.webp" type="image/webp">
+                        <!--[if IE 9]></video><![endif]-->
+                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    </picture>
+                </div>
+            </div>
+        </div>
+        <button class="thumbs-slider__zoom"></button>
+    </div>
+    <div class="swiper-button swiper-button-prev thumbs-slider-prev"></div>
+    <div class="swiper-button swiper-button-next thumbs-slider-next"></div>
+    <div class="swiper-pagination"></div>
+    <div class="thumbs-slider__description ">
+        <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
+        <div class="text">Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатанного рулонного проката, став важным звеном…</div>
+    </div>
 </div>
