modal sliders positions fixes

--- a/src/blocks/modules/galleryPopup/galleryPopup.html
+++ b/src/blocks/modules/galleryPopup/galleryPopup.html
@@ -9,10 +9,10 @@
 
             <div class="modal-content__inner">
                 <div class="thumbs-slider thumbs-slider--border">
-                    <div class="swiper-container thumbs-slider__main ">
+                    <div class="swiper-container thumbs-slider__main js-thumbs-slider__main js-thumbs-slider__main--modal">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -60,7 +60,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -72,7 +72,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -84,7 +84,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -96,7 +96,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <picture class="thumbs-slider__main-img">
+                                <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
@@ -132,10 +132,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-container thumbs-slider__nav">
+                        <div class="swiper-container thumbs-slider__nav js-thumbs-slider__nav">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -143,7 +143,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -151,7 +151,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -159,7 +159,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -167,7 +167,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -175,7 +175,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -183,7 +183,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -191,7 +191,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -199,7 +199,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
@@ -207,7 +207,7 @@
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
-                                    <picture class="thumbs-slider__nav-img">
+                                    <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
