fix sliders images styles + add modal vertical photo

--- a/src/blocks/modules/galleryPopup/galleryPopup.html
+++ b/src/blocks/modules/galleryPopup/galleryPopup.html
@@ -14,9 +14,9 @@
                             <div class="swiper-slide">
                                 <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                    <source srcset="img/AA5J6740.webp" type="image/webp">
+                                    <source srcset="img/AA5J6740-vertical.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740-vertical.jpg" type="image/jpg" title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
